# async-sqlite3

./: .gitignore  Cargo.toml  Makefile  README.md  bench.ts  bindings.json  connection.ts  connection_test.ts  execute_test.ts  integration_test.ts  query_test.ts  test.db-journal  value.ts
.github/workflows/: ci.yml
bench/: Makefile  deno_sqlite3.ts  package-lock.json  sqlite.ts  types.ts  workflows.json
bench/better-sqlite3/: index.js  package-lock.json  package.json
bench/node-sqlite3/: bench.db-journal  index.js  package-lock.json  package.json
bench/python-sqlite3/: main.py  requirements.txt
bench/sqlite3/: sqlite3.ts
bench/x_sqlite/: bench.db-journal  sqlite.ts
bench/x_sqlite3/: sqlite3.ts
bindings/: bindings.ts
src/: cache.rs  connection.rs  lib.rs  pool.rs  value.rs
