[package]
name = "deno-sqlite3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
deno_bindgen = { git = "https://github.com/littledivy/deno_bindgen", rev = "efa3e2c" }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.26.1", features = ["bundled", "modern_sqlite"] }
once_cell = "1.9.0"
anyhow = "1.0.44"
lru = "0.7.0"
